# Computer-Simulation

./: CMakeLists.txt  README.md
include/: cpu.h  disc.h  gpu.h  kdb.h  ram.h
src/: CMakeLists.txt  cpu.cpp  disc.cpp  gpu.cpp  kdb.cpp  main.cpp  ram.cpp
